[package]
name = "kea"
version = "0.1.2"
authors = ["Sam <sam.mackenzie@live.com>"]
edition = "2018"
license="MIT"
repository="https://github.com/BahNahNah/kea"
description="aur helper written in rust"
readme="README.md"
keywords = ["arch", "aur", "pacman", "arch", "yaourt"]

[dependencies]
alpm-rs="0.1.5"
aur-client="0.1.1"
pacman="0.1.3"
clap = "2.32.0"
crossterm = "0.6"
dirs = "1.0"
serde = { version = "1.0.88", features = ["derive"] }
toml = "0.4"
regex="1.1.0"