[package]
name = "kea"
version = "0.1.3"
authors = ["Sam <sam.mackenzie@live.com>"]
edition = "2018"
license="MIT"
repository="https://github.com/BahNahNah/kea"
description="aur helper written in rust"
readme="README.md"
keywords = ["arch", "aur", "pacman", "arch", "yaourt"]

[profile.release]
lto = true
panic = 'abort'

[dependencies]
alpm-rs="0.1.23"
aur-client="0.1.3"
pacman="0.1.3"
srcinfo = "0.1.1"
clap = "2.32.0"
dirs = "1.0"
serde = { version = "1.0.88", features = ["derive"] }
toml = "0.4"
termion = "1.5.1"
libc = "0.2.49"

